--- a/APDE/src/main/res/values/strings.xml
+++ b/APDE/src/main/res/values/strings.xml
@@ -1,49 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 	<!-- The title of the app - APDE. I don't whether or not this will actually get translated. -->
-	<string name="apde_app_title">APDE</string>
-	<string name="title_activity_editor">APDE</string>
+	<string name="apde_app_title">APDE-XE</string>
+	<string name="title_activity_editor">APDE-XE</string>
 	
 	<!-- Items that appear in the editor (or sketch properties) menu. -->
-	<string name="editor_menu_save_sketch">Save Sketch</string>
-	<string name="editor_menu_load_sketch">Load Sketch</string>
-	<string name="editor_menu_run_sketch">Run</string>
-	<string name="editor_menu_stop_sketch">Stop</string>
-	<string name="editor_menu_comp_select_app">App</string>
-	<string name="editor_menu_comp_select_wallpaper">Wallpaper</string>
-	<string name="editor_menu_comp_select_watchface">Watchface</string>
+	<string name="editor_menu_save_sketch">Сохранить скетч</string>
+	<string name="editor_menu_load_sketch">Загрузить скетч</string>
+	<string name="editor_menu_run_sketch">Запуск</string>
+	<string name="editor_menu_stop_sketch">Остновить</string>
+	<string name="editor_menu_comp_select_app">Приложение</string>
+	<string name="editor_menu_comp_select_wallpaper">Обои</string>
+	<string name="editor_menu_comp_select_watchface">Часы</string>
 	<string name="editor_menu_comp_select_vr">VR</string>
-	<string name="editor_menu_comp_select_preview">Preview</string>
-	<string name="editor_menu_undo">Undo</string>
-	<string name="editor_menu_redo">Redo</string>
-	<string name="editor_menu_tools">Tools</string>
-	<string name="editor_menu_new_sketch">New Sketch</string>
-	<string name="editor_menu_rename_sketch">Rename Sketch</string>
-	<string name="editor_menu_delete_sketch">Delete Sketch</string>
-	<string name="editor_menu_open_sketch_properties">Sketch Properties</string>
-	<string name="editor_menu_copy_to_sketchbook">Copy to Sketchbook</string>
-	<string name="editor_menu_move_temp_to_sketchbook">Move to Sketchbook</string>
+	<string name="editor_menu_comp_select_preview">Предпросмотр</string>
+	<string name="editor_menu_undo">Отменить</string>
+	<string name="editor_menu_redo">Повторить</string>
+	<string name="editor_menu_tools">Инструменты</string>
+	<string name="editor_menu_new_sketch">Новый скетч</string>
+	<string name="editor_menu_rename_sketch">Переименовать скетч</string>
+	<string name="editor_menu_delete_sketch">Удалить скетя</string>
+	<string name="editor_menu_open_sketch_properties">Параметры скетча</string>
+	<string name="editor_menu_copy_to_sketchbook">Скопировать в папку скетчей</string>
+	<string name="editor_menu_move_temp_to_sketchbook">Переместить в папку скетчей</string>
 	<!-- Note that "copy sketch" currently only appears in the sketch properties menu. -->
-	<string name="editor_menu_copy_sketch">Copy Sketch</string>
+	<string name="editor_menu_copy_sketch">Скопировать скетч</string>
 	
-	<string name="editor_menu_tab_new">New Tab</string>
-	<string name="editor_menu_tab_rename">Rename Tab</string>
-	<string name="editor_menu_tab_delete">Delete Tab</string>
+	<string name="editor_menu_tab_new">Новая вкладка</string>
+	<string name="editor_menu_tab_rename">Переименовать вкладку</string>
+	<string name="editor_menu_tab_delete">Удалить вкладку</string>
 	
 	<!-- This is the title of the settings activity. -->
-	<string name="title_activity_settings">Settings</string>
+	<string name="title_activity_settings">Настройки</string>
 	
 	<!-- This is the last menu item in all activities except for settings activities themselves. -->
-	<string name="menu_open_settings">Settings</string>
+	<string name="menu_open_settings">Насройки</string>
 	
-	<string name="title_activity_sketch_properties">Sketch Properties</string>
+	<string name="title_activity_sketch_properties">Параметры скетча</string>
 	
 	<!-- Generic dialog options used in a lot of places. -->
-	<string name="ok">OK</string>
-	<string name="cancel">Cancel</string>
-	<string name="delete">Delete</string>
-	<string name="create">Create</string>
-	<string name="overflow_more">More</string>
+	<string name="ok">Хорошо</string>
+	<string name="cancel">Отмена</string>
+	<string name="delete">Удалить</string>
+	<string name="create">Создать</string>
+	<string name="overflow_more">Больше</string>
 	
 	<!-- An empty array - used in some cases. Should not be translated. -->
 	<string-array name="empty"></string-array>
@@ -414,4 +414,7 @@
 	
 	<!-- Build misc. -->
 	<string name="build_copying">Copying…</string>
+    
+    <!-- dialogs -->
+    <string name="runtime_exception">Runtime exception</string>
 </resources>
